--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
-        "mockery/mockery": "*"
+        "mockery/mockery": "*",
+        "mikey179/vfsStream": "1.3.*@dev"
     },
     "autoload": {
         "psr-0": {
